--- a/website/templates/admin/schedules/edit_sched.html
+++ b/website/templates/admin/schedules/edit_sched.html
@@ -1,6 +1,6 @@
 {% extends "schedules/schedule.html" %}
 {% block overlay %}
-    <div id="overlay">
+   <!-- <div id="overlay">
         <div class='container'>
             <div class='header_div'>
                 <div class='header_title'>
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div>
-
+-->
     <div id="overlay">
         <div class='container'>
             <div class='header_div'>
@@ -73,96 +73,135 @@
             <div class='content_div'>
                 <form method='POST'>
                     <div class='form_div'>
-                        <div class='query'>
-                            <label for="userCode">Defense Code:</label>
-                            <span>
-                                <input type='text' id='userCode' name='userCode' value ="{{ to_edit.id }}" disabled>
-                            </span>
-                        </div>
+						<table class = "tableS">
+							<div class='query'>
+								<th class = "sep_fifty">
+									<label for="userCode">Defense Code:</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<input class = "dropdown_fill" type='text' id='userCode' name='userCode' value ="{{ to_edit.id }}" disabled>
+									</span>
+								</th>
+							</div>
+							<tr>		
+							<div class='query'>
+								<th>
+									<label for="group">Group</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<select class = "dropdown_fill" name='group' id='group'>
+											{% if groups %}
+												{% for group in groups %}
+													<option value="group{{ group.id }}" {% if to_edit.group_id == group.id %}selected {% endif %}>{{ group.id }} - {{ group.name}}</option>
+												{% endfor %}
+											{% endif %}
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								<th>
+									<label for="selectBox1">Head Panelist</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<select class = "dropdown_fill" name='selectBox1' id='selectBox1'>
+											<option value='no_value'>-----------</option>
+											{% if panels %}
+												{% for panel in panels %}
+													<option value="{{ panel.id }}" {% if to_edit.panels[0].id == panel.id %}selected {% endif %}>{{ panel.id }} - {{ panel.last_name}}</option>
+												{% endfor %}
+											{% endif %}
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								<th>
+									<label for="selectBox2">Co-Panelist</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<select class = "dropdown_fill" name='selectBox2' id='selectBox2'>
+											<option value='no_value'>-----------</option>
+											{% if panels %}
+												{% for panel in panels %}
+													<option value="{{ panel.id }}" {% if to_edit.panels[1].id == panel.id %}selected {% endif %}>{{ panel.id }} - {{ panel.last_name}}</option>
+												{% endfor %}
+											{% endif %}
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
 
-                        <div class='query'>
-                            <label for="group">Group</label>
-                            <span>
-                                <select name='group' id='group'>
-                                    {% if groups %}
-                                        {% for group in groups %}
-                                            <option value="group{{ group.id }}" {% if to_edit.group_id == group.id %}selected {% endif %}>{{ group.id }} - {{ group.name}}</option>
-                                        {% endfor %}
-                                    {% endif %}
-                                </select>
-                            </span>
-                        </div>
+							<div class='query'>
+								<th>
+									<label for="selectBox3">Co-Panelist</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<select class = "dropdown_fill" name='selectBox3' id='selectBox3'>
+											<option value='no_value'>-----------</option>
+											{% if panels %}
+												{% for panel in panels %}
+													<option value="{{ panel.id }}" {% if to_edit.panels[2].id == panel.id %}selected {% endif %}>{{ panel.id }} - {{ panel.last_name}}</option>
+												{% endfor %}
+											{% endif %}
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
 
-                        <div class='query'>
-                            <label for="selectBox1">Head Panelist</label>
-                            <span>
-                                <select name='selectBox1' id='selectBox1'>
-                                    <option value='no_value'>-----------</option>
-                                    {% if panels %}
-                                        {% for panel in panels %}
-                                            <option value="{{ panel.id }}" {% if to_edit.panels[0].id == panel.id %}selected {% endif %}>{{ panel.id }} - {{ panel.last_name}}</option>
-                                        {% endfor %}
-                                    {% endif %}
-                                </select>
-                            </span>
-                        </div>
+							<div class='query'>
+								<th>
+									<label for="defense_date">Defense Date:</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<input type="date" id="defense_date" name="defense_date" value='{{ to_edit.start_date.date() }}' required>
+									</span>
+								</th>
+							</div>
+							<tr>
 
-                        <div class='query'>
-                            <label for="selectBox2">Co-Panelist</label>
-                            <span>
-                                <select name='selectBox2' id='selectBox2'>
-                                    <option value='no_value'>-----------</option>
-                                    {% if panels %}
-                                        {% for panel in panels %}
-                                            <option value="{{ panel.id }}" {% if to_edit.panels[1].id == panel.id %}selected {% endif %}>{{ panel.id }} - {{ panel.last_name}}</option>
-                                        {% endfor %}
-                                    {% endif %}
-                                </select>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="selectBox3">Co-Panelist</label>
-                            <span>
-                                <select name='selectBox3' id='selectBox3'>
-                                    <option value='no_value'>-----------</option>
-                                    {% if panels %}
-                                        {% for panel in panels %}
-                                            <option value="{{ panel.id }}" {% if to_edit.panels[2].id == panel.id %}selected {% endif %}>{{ panel.id }} - {{ panel.last_name}}</option>
-                                        {% endfor %}
-                                    {% endif %}
-                                </select>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="defense_date">Defense Date:</label>
-                            <span>
-                                <input type="date" id="defense_date" name="defense_date" value='{{ to_edit.start_date.date() }}' required>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="start_time">Start Time:</label>
-                            <span>
-                                <input type="time" id="start_time" name="start_time" min="09:00" max='' value='{{ to_edit.start_date.strftime("%H:%M") }}' required>
-                            </span>
-                        </div>
-                        
-                        <div class='query'>
-                            <label for="duration">Duration</label>
-                            <span>
-                                <select name='duration' id='duration'>
-                                    <option value='hour1'>1</option>
-                                    <option value='hour2'>2</option>
-                                    <option value='hour3'>3</option>
-                                </select>
-                            </span>
-                        </div>
-
-                        <button type='submit' id='submit' name='submit'>Submit</button>
+							<div class='query'>
+								<th>
+									<label for="start_time">Start Time:</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<input type="time" id="start_time" name="start_time" min="09:00" max='' value='{{ to_edit.start_date.strftime("%H:%M") }}' required>
+									</span>
+								</th>
+							</div>
+							<tr>
+							
+							<div class='query'>
+								<th>
+									<label for="duration">Duration</label>
+								</th>
+								<th class = "no_border"> 
+									<span>
+										<select name='duration' id='duration'>
+											<option value='hour1'>1</option>
+											<option value='hour2'>2</option>
+											<option value='hour3'>3</option>
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<th colspan = "2">
+								<button class = "but2" type='submit' id='submit' name='submit'>Submit</button>
+							</th>
+						</table>
                     </div>
-                    
                 </form>
             </div>
         </div>
