--- a/website/templates/admin/panelists/edit_panel.html
+++ b/website/templates/admin/panelists/edit_panel.html
@@ -15,45 +15,70 @@
 
             <div class='content_div'>
                 <div class='form_div'>
-                    <div class='query'>
-                        <label for="groupCode">Group Code:</label>
-                        <span>
-                            <input type='text' id='userCode' name='userCode' value ="{{ to_edit.id }}" disabled>
-                        </span>
-                    </div>
-
-                    <div class='query'>
-                        <label for="lastName">Last Name:</label>
-                        <span>
-                            <input type='text' id='lastName' name='lastName' value="{{ to_edit.last_name }}">
-                        </span>
-                    </div>
-                        
-                    <div class='query'>
-                        <label for="firstName">First Name</label>
-                        <span>
-                            <input type='text' id='firstName' name='firstName' value="{{ to_edit.first_name }}">
-                        </span>
-                    </div>
-
-                    <div class='query'>
-                        <label for="middleIn">Middle Initial</label>
-                        <span>
-                            <input type='text' id='middleIn' name='middleIn' value="{{ to_edit.middle_in }}">
-                        </span>
-                    </div>
-
-                    <div class='query'>
-                        <label for="school">School:</label>
-                        <span>
-                            <select name="school" id='school'>
-                                <option value='FEU Alabang' {% if to_edit.school == 'FEU Alabang' %}selected {% endif %}>FEU Alabang</option>
-                                <option value='FEU Tech' {% if to_edit.school == 'FEU Tech' %}selected {% endif %}>FEU Tech</option>
-                                <option value='FEU Diliman' {% if to_edit.school == 'FEU Diliman' %}selected {% endif %}>FEU Diliman</option>
-                            </select>
-                        </span>
-                    </div>
-                    <button id='submit' name='submit'>Submit</button>
+					<table class = "tableS">
+						<div class='query'>
+							<th>
+								<label for="groupCode">Group Code:</label>
+							</th>
+							<th class = "no_border">
+								<span>
+									<input type='text' id='userCode' name='userCode' value ="{{ to_edit.id }}" disabled>
+								</span>
+							</th>
+						</div>
+						<tr>
+						<div class='query'>
+							<th>
+								<label for="lastName">Last Name:</label>
+							</th>
+							<th class ="no_border">
+								<span>
+									<input class ="dropdown_fill" type='text' id='lastName' name='lastName' value="{{ to_edit.last_name }}">
+								</span>
+							</th>
+						</div>
+						<tr>
+						<div class='query'>
+							<th>
+								<label for="firstName">First Name</label>
+							</th>
+							<th class = "no_border">
+								<span>
+									<input class ="dropdown_fill" type='text' id='firstName' name='firstName' value="{{ to_edit.first_name }}">
+								</span>
+							</th>
+						</div>
+						<tr>
+						<div class='query'>
+							<th>
+								<label for="middleIn">Middle Initial</label>
+							</th>
+							<th class = "no_border">
+								<span>
+									<input class ="dropdown_fill" type='text' id='middleIn' name='middleIn' value="{{ to_edit.middle_in }}">
+								</span>	
+							</th>
+						</div>
+						<tr>
+						<div class='query'>
+							<th>
+								<label for="school">School:</label>
+							</th>
+							<th class = "no_border">
+								<span>
+									<select class ="dropdown_fill" name="school" id='school'>
+										<option value='FEU Alabang' {% if to_edit.school == 'FEU Alabang' %}selected {% endif %}>FEU Alabang</option>
+										<option value='FEU Tech' {% if to_edit.school == 'FEU Tech' %}selected {% endif %}>FEU Tech</option>
+										<option value='FEU Diliman' {% if to_edit.school == 'FEU Diliman' %}selected {% endif %}>FEU Diliman</option>
+									</select>
+								</span>
+							</th>
+						</div>
+						<tr>
+						<th colspan = "2">
+							<button class = "but2" id='submit' name='submit'>Submit</button>
+						</th>
+					</table>
                 </div>
             </div>
         </div>
