--- a/website/templates/admin/rubrics/edit_rubric.html
+++ b/website/templates/admin/rubrics/edit_rubric.html
@@ -7,6 +7,9 @@ Rubrics
 <a href="/new_rubric/">
     <button>Create New Rubric</button>
 </a>
+<head>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
+</head>
 {% endblock %}
 {% block content %}
     <style>
@@ -46,88 +49,153 @@ Rubrics
                 <div class='content_div'>
                     <form method='POST'>
                         <div class='form_div'>
-                            <div class='query'>
-                                <label for="rubricCode">Rubric Code:</label>
-                                <span>
-                                    <input type='text' id='rubricCode' name='rubricCode' value ="{{ to_edit.id }}" disabled><br>
-                                </span>
-                            </div>
+							<table class = "tableS">
+								<div class='query'>
+									<th class = "sep_fifty">
+										<label for="rubricCode">Rubric Code:</label>
+									</th>
+									<th class = "no_border">
+										<span>
+											<input type='text' id='rubricCode' name='rubricCode' value ="{{ to_edit.id }}" disabled><br>
+										</span>
+									</th>
+								</div>
+								<tr>
 
-                            <input type='hidden' value='{{ to_edit.rubric_type }}' id='hidden_type'>
+								<input type='hidden' value='{{ to_edit.rubric_type }}' id='hidden_type'>
 
-                            <div class='query'>
-                                <label for="rubType">Rubric Type:</label>
-                                <span>
-                                    <input type='text' id='rubricType' name='rubricType' value ="{{ to_edit.rubric_type }}" disabled><br>
-                                </span>
-                            </div>
+								<div class='query'>
+									<th>
+										<label for="rubType">Rubric Type:</label>
+									</th>
+									<th class = "no_border">
+										<span>
+											<input type='text' id='rubricType' name='rubricType' value ="{{ to_edit.rubric_type }}" disabled><br>
+										</span>
+									</th>
+								</div>
+								<tr>
+								
+								<th colspan = "2">
+									<label for="pblLvl">PBL Level:</label>
+								</th>
+								<tr>
+								<th colspan = "2" class = "no_border">
+									<span>
+										{% for x in range(1, 5) %}
+											{% set temp = to_edit.pbl_lvl[3] | int %}
+											<input type="radio" id="pbl{{ x }}" name="pblLvl" value="PBL{{ x }}" {% if temp == x %}checked {% endif %}>
+											<label for="pbl{{ x }}">PBL{{ x }}</label>
+										{% endfor %}
+									</span>
+								</th>
+								<tr>
 
-                            <label for="pblLvl">PBL Level:</label>
-                            <span>
-                                {% for x in range(1, 5) %}
-                                    {% set temp = to_edit.pbl_lvl[3] | int %}
-                                    <input type="radio" id="pbl{{ x }}" name="pblLvl" value="PBL{{ x }}" {% if temp == x %}checked {% endif %}>
-                                    <label for="pbl{{ x }}">PBL{{ x }}</label>
-                                {% endfor %}
-                            </span>
-                            
+								<div class='query'>
+									<th>
+										<label for="category">Category:</label>
+									</th>
+									<th class = "no_border">
+										<span>
+											<input class="dropdown_fill" type='text' id='category' name='category' style='text-align: left;' required value='{{ to_edit.category }}'>
+										</span>
+									</th>
+								</div>
+								<tr>
 
-                            <div class='query'>
-                                <label for="category">Category:</label>
-                                <span>
-                                    <input type='text' id='category' name='category' style='text-align: left;' required value='{{ to_edit.category }}'>
-                                </span>
-                            </div>
+								<div class='query'>
+									<th colspan = "2">
+										<label for="desc">Description:</label>
+									</th>
+									<tr>
+									<th colspan = "2" class = "no_border">
+										<span>
+											<input class="min_txt_size"  type='text' id='desc' name='desc' style='text-align: left;' value='{{ to_edit.desc }}' required>
+										</span>
+									</th>
+								</div>
+								<tr>
 
-                            <div class='query'>
-                                <label for="desc">Description:</label>
-                                <span>
-                                    <input type='text' id='desc' name='desc' style='text-align: left;' value='{{ to_edit.desc }}' required>
-                                </span>
-                            </div>
+								<div class='query'>
+									<th colspan = "2">
+										<label for='rate5'>Rate 5:</label>
+									</th>
+									<tr>
+									<th colspan = "2"  class = "no_border">
+										<span>
+											<textarea class = "min_txt_size"  id='rate5' name='rate5' required>{{ to_edit.rate5 }}</textarea>
+										</span>
+									</th>
+								</div>
+								<tr>
 
-                            <div class='query'>
-                                <label for='rate5'>Rate 5:</label>
-                                <span>
-                                    <textarea id='rate5' name='rate5' required>{{ to_edit.rate5 }}</textarea>
-                                </span>
-                            </div>
+								<div class='query'>
+									<th colspan = "2">
+										<label for='rate4'>Rate 4:</label>
+									</th>
+									<tr>
+									<th colspan = "2"  class = "no_border">
+										<span>
+											<textarea class = "min_txt_size" id='rate4' name='rate4' required>{{ to_edit.rate4 }}</textarea>
+										</span>
+									</th>
+								</div>
+								<tr>
 
-                            <div class='query'>
-                                <label for='rate4'>Rate 4:</label>
-                                <span>
-                                    <textarea id='rate4' name='rate4' required>{{ to_edit.rate4 }}</textarea>
-                                </span>
-                            </div>
+								<div class='query'>
+									<th colspan = "2">
+										<label for='rate3'>Rate 3:</label>
+									</th>
+									<tr>
+									<th colspan = "2"  class = "no_border">
+										<span>
+											<textarea class = "min_txt_size" id='rate3' name='rate3' required>{{ to_edit.rate3 }}</textarea>
+										</span>
+									</th>
+								</div>
+								<tr>
 
-                            <div class='query'>
-                                <label for='rate3'>Rate 3:</label>
-                                <span>
-                                    <textarea id='rate3' name='rate3' required>{{ to_edit.rate3 }}</textarea>
-                                </span>
-                            </div>
+								<div class='query'>
+									<th colspan = "2">
+										<label for='rate2'>Rate 2:</label>
+									</th>
+									<tr>
+									<th colspan = "2"  class = "no_border">
+										<span>
+											<textarea class = "min_txt_size" id='rate2' name='rate2' required>{{ to_edit.rate2 }}</textarea>
+										</span>
+									</th>
+								</div>
+								<tr>
 
-                            <div class='query'>
-                                <label for='rate2'>Rate 2:</label>
-                                <span>
-                                    <textarea id='rate2' name='rate2' required>{{ to_edit.rate2 }}</textarea>
-                                </span>
-                            </div>
+								<div class='query'>
+									<th colspan = "2">
+										<label for='rate1'>Rate 1:</label>
+									</th>
+									<tr>
+									<th colspan = "2"  class = "no_border">
+										<span>
+											<textarea class = "min_txt_size" id='rate1' name='rate1' required>{{ to_edit.rate1 }}</textarea>
+										</span>
+									</th>
+								</div>
+								<tr>
 
-                            <div class='query'>
-                                <label for='rate1'>Rate 1:</label>
-                                <span>
-                                    <textarea id='rate1' name='rate1' required>{{ to_edit.rate1 }}</textarea>
-                                </span>
-                            </div>
-
-                            <div class='query'>
-                                <label for="weight">Weight</label>
-                                <span>
-                                    <input type="number" id="weight" name='weight' autocomplete='off' min='1' max='9' value='{{ to_edit.weight }}' onkeydown='return false;'>
-                                </span>
-                            </div>
-                            <button type='submit' id='submit' name='submit'>Submit</button>
+								<div class='query'>
+									<th>
+										<label for="weight">Weight</label>
+									</th>
+									<th class = "no_border" >
+										<span>
+											<input type="number" id="weight" name='weight' autocomplete='off' min='1' max='9' value='{{ to_edit.weight }}' onkeydown='return false;'>
+										</span>
+									</th>
+								</div>
+								<tr>
+								<th colspan = "2">
+									<button class = "but2" type='submit' id='submit' name='submit'>Submit</button>
+								</th>
+							</table>
                         </div>
                         
                     </form>
