--- a/website/templates/admin/gradesheets/gradesheet.html
+++ b/website/templates/admin/gradesheets/gradesheet.html
@@ -32,6 +32,8 @@ Gradesheets
 						</ul>
 					</table>
 					<table>
+						<td class = "no_border sep_20">
+						<td class = "no_border sep_20">
 						<th>
 							<a href="/view_sheet/{{ template.id }}">
 								<button class = "but2">View</button>
