--- a/website/templates/admin/groups/groups.html
+++ b/website/templates/admin/groups/groups.html
@@ -50,12 +50,15 @@
 						</ul>
                     </table>
 					<table>
-						<th>
+						<td class = "no_border sep_20">
+						<td class = "no_border sep_20">
+						<td class = "no_border sep_20">
+						<th class = "sep_20">
 							<a href="/edit_group/{{group.id}}">
 								<button class = "but2">Edit</button>
 							</a>
 						</th>
-						<th>
+						<th class = "sep_20">
 							<a href="/delete_group/{{group.id}}">
 								<button class = "but2">Delete</button>
 							</a>
