--- a/website/templates/admin/panelists/panelist.html
+++ b/website/templates/admin/panelists/panelist.html
@@ -47,12 +47,15 @@
 						{% endif %}
 					</table>
 					<table>
-						<th>
+						<td class = "no_border sep_20">
+						<td class = "no_border sep_20">
+						<td class = "no_border sep_20">						
+						<th  class = "sep_20">
 							<a href="/edit_panel/{{panel.id}}">
 								<button class = "but2 ">Edit</button>
 							</a>
 						</th>
-						<th>
+						<th  class = "sep_20">
 							<a href="/delete_panel/{{panel.id}}">
 								<button class = "but2">Delete</button>
 							</a>
