--- a/website/templates/admin/schedules/schedule.html
+++ b/website/templates/admin/schedules/schedule.html
@@ -47,22 +47,23 @@
 						<tr>
 					</table>
 					<table>
-						<th class = "sep_fifty" >
+						<td class = "no_border sep_20">
+						<th class = "sep_20" >
 							<a href="/assign_indiv/">
 								<button class = "but2" >Assign Individual Gradesheet</button>
 							</a>
 						</th>
-						<th class = "sep_fifty">
+						<th class = "sep_20">
 							<a href="">
 								<button class = "but2" >Assign Group Gradesheet</button>
 							</a>
 						</th>
-						<th class = "sep_fifty">
+						<th class = "sep_20">
 							<a href="/edit_sched/{{ defense.id }}">
 								<button class = "but2" >Edit</button>
 							</a>
 						</th>
-						<th class = "sep_fifty">
+						<th class = "sep_20">
 							<a href="/delete_sched/{{ defense.id }}">
 								<button class = "but2" >Delete</button>
 							</a>
