--- a/website/templates/admin/students/student.html
+++ b/website/templates/admin/students/student.html
@@ -25,12 +25,15 @@ Students
 						<tr>
 					</table>
 					<table>
-						<th>
+						<td class = "no_border sep_20">
+						<td class = "no_border sep_20">
+						<td class = "no_border sep_20">	
+						<th class = "sep_20">
 							<a href="/edit_student/{{ student.stud_no }}">
 								<button class = "but2">Edit</button>
 							</a>
 						</th>
-						<th>
+						<th class = "sep_20">
 							<a href="/delete_student/{{ student.stud_no }}">
 								<button class = "but2">Delete</button>
 							</a>
