--- a/website/templates/admin/groups/groups.html
+++ b/website/templates/admin/groups/groups.html
@@ -49,16 +49,16 @@
 							{% endfor%}
 						</ul>
                     </table>
-					<table>
+					<table class = "no_border">
 						<td class = "no_border sep_20">
 						<td class = "no_border sep_20">
 						<td class = "no_border sep_20">
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="/edit_group/{{group.id}}">
 								<button class = "but2">Edit</button>
 							</a>
 						</th>
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="/delete_group/{{group.id}}">
 								<button class = "but2">Delete</button>
 							</a>
