--- a/website/templates/admin/schedules/schedule.html
+++ b/website/templates/admin/schedules/schedule.html
@@ -48,24 +48,24 @@
 						<td colspan = "4"> {{ defense.start_date}} </td>
 						<tr>
 					</table>
-					<table>
+					<table class = "no_border">
 						<td class = "no_border sep_20">
-						<th class = "sep_10" >
+						<th class = "no_border sep_10" >
 							<a href="/assign_indiv/">
 								<button class = "but2" >Assign Individual Gradesheet</button>
 							</a>
 						</th>
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="">
 								<button class = "but2" >Assign Group Gradesheet</button>
 							</a>
 						</th>
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="/edit_sched/{{ defense.id }}">
 								<button class = "but2" >Edit</button>
 							</a>
 						</th>
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="/delete_sched/{{ defense.id }}">
 								<button class = "but2" >Delete</button>
 							</a>
