--- a/website/templates/admin/students/student.html
+++ b/website/templates/admin/students/student.html
@@ -24,16 +24,16 @@ Students
 						<td>{{ student.group_id }} - {{ student.group.name }}</td>
 						<tr>
 					</table>
-					<table>
+					<table class = "no_border">
 						<td class = "no_border sep_20">
 						<td class = "no_border sep_20">
 						<td class = "no_border sep_20">	
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="/edit_student/{{ student.stud_no }}">
 								<button class = "but2">Edit</button>
 							</a>
 						</th>
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="/delete_student/{{ student.stud_no }}">
 								<button class = "but2">Delete</button>
 							</a>
