--- a/website/templates/admin/panelists/panelist.html
+++ b/website/templates/admin/panelists/panelist.html
@@ -46,16 +46,16 @@
 							<td colspan = "2">NOTHING SCHEDULED</td>
 						{% endif %}
 					</table>
-					<table>
+					<table class = "no_border">
 						<td class = "no_border sep_20">
 						<td class = "no_border sep_20">
 						<td class = "no_border sep_20">						
-						<th  class = "sep_10">
+						<th  class = "no_border sep_10">
 							<a href="/edit_panel/{{panel.id}}">
 								<button class = "but2 ">Edit</button>
 							</a>
 						</th>
-						<th  class = "sep_10">
+						<th  class = "no_border sep_10">
 							<a href="/delete_panel/{{panel.id}}">
 								<button class = "but2">Delete</button>
 							</a>
