--- a/website/templates/admin/rubrics/rubrics.html
+++ b/website/templates/admin/rubrics/rubrics.html
@@ -46,16 +46,16 @@
 						<td colspan = "2">{{ rubric.category }}</td>
 						<tr>
 					</table>
-					<table>
+					<table class = "no_border">
 						<td class = "no_border sep_20">
 						<td class = "no_border sep_20">
 						<td class = "no_border sep_20">
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="/edit_rubric/{{ rubric.id }}">
 								<button class = "but2">Edit</button>
 							</a>
 						</th>
-						<th class = "sep_10">
+						<th class = "no_border sep_10">
 							<a href="/delete_rubric/ {{ rubric.id }}">
 								<button class = "but2">Delete</button>
 							</a>
