--- a/website/templates/admin/groups/edit_group.html
+++ b/website/templates/admin/groups/edit_group.html
@@ -8,7 +8,7 @@
         <div class='container'>
             <div class='header_div'>
                 <div class='header_title'>
-                    <p>Edit Group</p>
+                    <p class = "header_white">Edit Group</p>
                 </div>
                 <div class='close_button'>
                     <a href='/groups/'>
