--- a/website/templates/admin/groups/new_group.html
+++ b/website/templates/admin/groups/new_group.html
@@ -11,7 +11,7 @@
         <div class='container'>
             <div class='header_div'>
                 <div class='header_title hd_text'>
-                    <p>Create New Group</p>
+                    <p class = "header_white">Create New Group</p>
                 </div>
                 <div class='close_button'>
                     <a href='/groups/'>
