--- a/website/templates/admin/panelists/edit_panel.html
+++ b/website/templates/admin/panelists/edit_panel.html
@@ -4,7 +4,7 @@
         <div class='container'>
             <div class='header_div'>
                 <div class='header_title'>
-                    <p>Create New Panelist</p>
+                    <p class = "header_white">Create New Panelist</p>
                 </div>
                 <div class='close_button'>
                     <a href='/panelist/'>
