--- a/website/templates/admin/panelists/new_panel.html
+++ b/website/templates/admin/panelists/new_panel.html
@@ -5,7 +5,7 @@
         <div class='container'>
             <div class='header_div'>
                 <div class='header_title hd_text'>
-                    <p>Create New Panelist</p>
+                    <p class = "header_white">Create New Panelist</p>
                 </div>
                 <div class='close_button'>
                     <a href='/panelist/'>
