--- a/website/templates/admin/rubrics/edit_rubric.html
+++ b/website/templates/admin/rubrics/edit_rubric.html
@@ -37,7 +37,7 @@ Rubrics
             <div class='container'>
                 <div class='header_div'>
                     <div class='header_title'>
-                        <p>Edit Rubric</p>
+                        <p class ="header_white">Edit Rubric</p>
                     </div>
                     <div class='close_button'>
                         <a href='/rubrics/'>
