--- a/website/templates/admin/schedules/edit_sched.html
+++ b/website/templates/admin/schedules/edit_sched.html
@@ -1,7 +1,6 @@
 {% extends "schedules/schedule.html" %}
 {% block overlay %}
-   <!-- <div id="overlay">
-        <div class='container'>
+   <!--      <div class='container'>
             <div class='header_div'>
                 <div class='header_title'>
                     <p>Create New Schedule</p>
@@ -61,7 +60,7 @@
         <div class='container'>
             <div class='header_div'>
                 <div class='header_title'>
-                    <p>Edit Schedule</p>
+                    <p class = "header_white">Edit Schedule</p>
                 </div>
                 <div class='close_button'>
                     <a href='/schedule/'>
