--- a/website/templates/admin/schedules/new_sched.html
+++ b/website/templates/admin/schedules/new_sched.html
@@ -7,7 +7,7 @@
         <div class='container'>
             <div class='header_div'>
                 <div class='header_title'>
-                    <p>Create New Schedule</p>
+                    <p class ="header_white">Create New Schedule</p>
                 </div>
                 <div class='close_button'>
                     <a href='/schedule/'>
