--- a/website/templates/admin/students/edit_student.html
+++ b/website/templates/admin/students/edit_student.html
@@ -5,7 +5,7 @@
         <div class='container'>
             <div class='header_div'>
                 <div class='header_title'>
-                    <p>Edit Student</p>
+                    <p class = "header_white">Edit Student</p>
                 </div>
                 <div class='close_button'>
                     <a href='/student/'>
