--- a/website/static/admin/new_style.css
+++ b/website/static/admin/new_style.css
@@ -187,16 +187,20 @@ input {
 }
 
 .container {
+	
     position: absolute;
     flex-direction: column;
     width: 30%;
-    height: 55%;
+    min-height: 0;
+	max-height: 80%;
     background-color: white;
     overflow-y: hidden;
+    overflow-y: auto;
 }
 
 .container .header_div {
-    height: 20%;
+	
+    height: 10%;
     display: inline-block;
     width: 100%;
     padding: 10px;
@@ -226,14 +230,15 @@ input {
     width: 100%;
     height: 80%;
     padding: 20px;
-    overflow: auto;
 }
+
+
 
 .container .content_div .form_div {
     display: inline-flex;
     flex-direction: column;
-    gap: 20px;
     width: 100%;
+
 }
 
 .query {
