Updated populate file

--- a/website/templates/admin/schedules/schedule.html
+++ b/website/templates/admin/schedules/schedule.html
@@ -21,6 +21,15 @@
             $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
             });
         });
+
+		$(document).ready(function(){
+            $('select').on('click', function(event ) {
+                var prevValue = $(this).data('previous');
+            $('select').not(this).find('option[value="'+prevValue+'"]').show();    
+                var value = $(this).val();
+            $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
+            });
+        });
     </script>
     <div class='display_grid'>
         {% if defenses %}
